# clip_watcher

./: Makefile  README.md  install.yml  requirements.txt  setup.cfg
src/clip_watcher/: parser.py  watch_clipboard.py
templates/: watch-clipboard.service.j2
