[metadata]
name = clip-watcher
version = 0.1.1
author = Chris Meyers
author_email = chris.meyers.fsu@gmail.com
description = Monitor clipboard and perform transforms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrismeyersfsu/clip_watcher
project_urls =
    Bug Tracker = https://github.com/chrismeyersfsu/clip_watcher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
